[package]
name = "tracing_json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.97"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
time = { version = "0.3.22", features = ["formatting"] }
