[package]
name = "tracing_json_span_fields"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Structured JSON logging from tracing with fields from spans"
repository = "https://github.com/jjtt/tracing_json"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.97"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
time = { version = "0.3.22", features = ["formatting"] }

[dev-dependencies]
time = { version = "0.3.22", features = ["parsing", "macros"] }